--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
 			<artifactId>maven-surefire-report-plugin</artifactId>
 			<version>2.19.1</version>
 		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
 
 	</dependencies>
 	<build>
